ADD: Stan callback classes CHG: cmake and python build scripts to get proff of concept up and running

--- a/Documentation/ContributorsManual/ContributorsGuide.tex
+++ b/Documentation/ContributorsManual/ContributorsGuide.tex
@@ -10,7 +10,7 @@
 \usepackage{setspace} % for defining spacing between lines
 \usepackage{cmap} % allow searching in pdf documents
 \usepackage{tabulary} % better tables
-\usepackage{comment} % block comments
+\usepackage{comment} % block commentsEstimation_section
 
 \usepackage[usenames, dvipsnames]{color} % Highlighting text for editing
 
@@ -305,5 +305,6 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 
 \include{ModeratingPullRequest}
 
+\include{AddingBackends}
 \end{document}
 %End
