--- a/Documentation/ContributorsManual/ContributorsGuide.tex
+++ b/Documentation/ContributorsManual/ContributorsGuide.tex
@@ -11,8 +11,15 @@
 \usepackage{cmap} % allow searching in pdf documents
 \usepackage{tabulary} % better tables
 \usepackage{comment} % block commentsEstimation_section
-
-\usepackage[usenames, dvipsnames]{color} % Highlighting text for editing
+\usepackage{csquotes} % for closing quotes \enquote{text}
+\usepackage{listings}
+\usepackage{xcolor}
+\lstset { %
+	language=C++,
+	backgroundcolor=\color{black!5}, % set backgroundcolor
+	basicstyle=\footnotesize,% basic font setting
+}
+%\usepackage[usenames, dvipsnames]{color} % Highlighting text for editing
 
 % hyperref for HTML links within pdf 
 %% EXAMPLE: \href{http://www.niwa.co.nz}{NIWA}
